[gd_scene load_steps=9 format=3 uid="uid://cv0oc3kl26hbm"]

[ext_resource type="Script" path="res://vidas.gd" id="1_475b3"]
[ext_resource type="FontFile" uid="uid://sldvm1yhqh3" path="res://Sprites/Player/Gorgeous Pixel.ttf" id="1_w25jl"]
[ext_resource type="Texture2D" uid="uid://o61pjmd5o656" path="res://Sprites/Player/Player_1_0001.png" id="2_2wjps"]
[ext_resource type="Script" path="res://CanvasLaye_vidasr.gd" id="2_x5hou"]
[ext_resource type="Script" path="res://Global.gd" id="3_gvr1a"]
[ext_resource type="Texture2D" uid="uid://0e0r42lbvn6q" path="res://Sprites/Player/Player_2_0001_0001.png" id="3_vu2up"]
[ext_resource type="Texture2D" uid="uid://d1a5hf174rdo1" path="res://Sprites/Player/Player_3_0001_0001.png" id="4_eltre"]

[sub_resource type="LabelSettings" id="LabelSettings_5757p"]
font = ExtResource("1_w25jl")
font_size = 15

[node name="vidas" type="Node2D"]
script = ExtResource("1_475b3")

[node name="contador" type="CanvasLayer" parent="."]
script = ExtResource("2_x5hou")

[node name="vidas_jug1" type="Label" parent="contador"]
offset_left = 112.0
offset_top = 1.0
offset_right = 129.0
offset_bottom = 23.0
text = "00
"
label_settings = SubResource("LabelSettings_5757p")

[node name="vidas_jug2" type="Label" parent="contador"]
offset_left = 160.0
offset_top = 1.0
offset_right = 177.0
offset_bottom = 23.0
text = "00
"
label_settings = SubResource("LabelSettings_5757p")

[node name="vidas_jug3" type="Label" parent="contador"]
offset_left = 208.0
offset_top = 1.0
offset_right = 225.0
offset_bottom = 23.0
text = "00"
label_settings = SubResource("LabelSettings_5757p")

[node name="Control" type="Control" parent="contador"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_gvr1a")

[node name="vidasp1" type="Node2D" parent="contador"]
position = Vector2(112, 0)

[node name="Sprite2D" type="Sprite2D" parent="contador/vidasp1"]
position = Vector2(-9, 8)
texture = ExtResource("2_2wjps")
hframes = 8
vframes = 13
frame = 16

[node name="vidasp2" type="Node2D" parent="contador/vidasp1"]
position = Vector2(48, 0)

[node name="Sprite2D" type="Sprite2D" parent="contador/vidasp1/vidasp2"]
position = Vector2(-9, 8)
texture = ExtResource("3_vu2up")
hframes = 8
vframes = 13
frame = 16

[node name="vidasp3" type="Node2D" parent="contador/vidasp1"]
position = Vector2(96, 0)

[node name="Sprite2D" type="Sprite2D" parent="contador/vidasp1/vidasp3"]
position = Vector2(-9, 8)
texture = ExtResource("4_eltre")
hframes = 8
vframes = 13
frame = 16
